force-app/main/default/objects/Permission_Set_Assignment__mdt/fields/Is_Group__c.field-meta.xml
<CustomField>
    <fullName>Is_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark as true if Permission set Group</inlineHelpText>
    <label>Is Group</label>
    <type>Checkbox</type>
</CustomField>