force-app/main/default/objects/Permission_Set_Assignment__mdt/fields/Matching_Type__c.field-meta.xml
<CustomField>
    <fullName>Matching_Type__c</fullName>
    <defaultValue>&quot;Profile&quot;</defaultValue>
    <label>Matching Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile</fullName>
                <default>true</default>
                <label>Profile</label>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>User License</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>