force-app/main/default/objects/Permission_Set_Assignment__mdt/fields/Matching_Value__c.field-meta.xml
<CustomField>
    <fullName>Matching_Value__c</fullName>
    <defaultValue>&quot;System Administrator&quot;</defaultValue>
    <label>Matching Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>