force-app/main/default/objects/Permission_Set_Assignment__mdt/fields/Permission_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Name__c</fullName>
    <label>Permission Set Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>