force-app/main/default/objects/Permission_Set_Assignment__mdt/fields/Remove_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Remove_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked if a User does not match criteria they are removed from permission sets.</inlineHelpText>
    <label>Remove Assignments</label>
    <type>Checkbox</type>
</CustomField>