force-app/main/default/objects/Permission_Set_Assignment__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Permission_Set_Name__c</columns>
    <columns>Matching_Type__c</columns>
    <columns>Matching_Value__c</columns>
    <columns>Remove_Assignments__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>